{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 8,
  "lineage": "13dfa1d9-165d-bd54-0bc2-5796ed504e73",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.121.50.16",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-04-15T21:02:51.506-07:00",
            "id": "projects/experimentation1-415504/regions/us-central1/addresses/internet-gateway",
            "name": "internet-gateway",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "experimentation1-415504",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/experimentation1-415504/regions/us-central1/addresses/internet-gateway"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-15T21:02:51.048-07:00",
            "deny": [],
            "description": "Allow inbound HTTP traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/experimentation1-415504/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/experimentation1-415504/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "experimentation1-415504",
            "self_link": "https://www.googleapis.com/compute/v1/projects/experimentation1-415504/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-15T21:02:50.666-07:00",
            "deny": [],
            "description": "Allow inbound SSH traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/experimentation1-415504/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/experimentation1-415504/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "experimentation1-415504",
            "self_link": "https://www.googleapis.com/compute/v1/projects/experimentation1-415504/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/experimentation1-415504/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "project": "experimentation1-415504",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/experimentation1-415504/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-15T21:02:36.406-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/experimentation1-415504/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/experimentation1-415504/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "experimentation1-415504",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/experimentation1-415504/regions/us-central1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}